# Efficient-AI-based-Development-BE

./: .env.backup  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  fastmcp_cli.py  pyproject.toml  stub_mcp.py  test_openapi.py  test_web_ui_flow.sh
.fastmcp/: project.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
ai_module/chains/: codegen_chain.py  pm_chain.py  prd_chain.py  srs_chain.py  task_ai_chain.py  tasklist_chain.py  userstory_chain.py
ai_module/common/: ids.py  llm.py  prompts.py
ai_module/graphs/: decomposition_graph.py  state.py
ai_module/graphs/agents/: auditor_agent.py  planner_agent.py  writer_agent.py
alembic/: env.py
alembic/versions/: 20241109_mcp_stub.py  20251109_mcp_add_updated_at.py  20251109_mcp_align_columns.py  20251109_mcp_run_cleanup.py  20251109_mcp_run_timestamps.py  20251109_mcp_session_cleanup.py  20251109_mcp_session_context.py  20251109_mcp_session_timestamps.py  20251109_mcp_status.py  20251109_mcp_status_constraint.py  20251117_merge_heads.py  20251125_add_task_id_to_mcp_runs.py  add_task_fields_migration.py  e6945cbd3c1d_initial_migration.py  rev20251201_role.py
app/: main.py
app/api/v1/routes/: __init__.py  ai.py  auth.py  chat.py  chats.py  documents.py  generate.py  insights.py  mcp.py  projects.py  tasks.py
app/core/: config.py  cors.py  exceptions.py  logging.py
app/db/: database.py  models.py
app/domain/: ai.py  auth.py  chat.py  documents.py  insights.py  projects.py  tasks.py
app/domain/mcp/: __init__.py  service.py
app/domain/mcp/providers/: __init__.py  chatgpt.py
app/schemas/: ai.py  auth.py  chat.py  document.py  generation.py  insight.py  mcp.py  project.py  task.py
app/utils/: logger.py
efficient_mcp_cli/: __init__.py  cli.py  config.py
fastmcp-fastapi/: .dockerignore  Dockerfile  README.md  server.py
mcp_adapter/: __init__.py  server.py  test_connection.py
scripts/: create_prd_document.py  create_user_story_document.py  seed_realistic_data.py
tests/: conftest.py  test_main.py
tests/test_routes/: test_projects.py
