[project]
name = "efficient-ai-backend"
version = "0.1.0"
description = "AI 기반 효율적인 개발을 위한 백엔드 시스템"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "oracledb>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "openai>=1.14.0",
    "anthropic>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true


[project.scripts]
fastmcp = "fastmcp_cli:app"

[tool.ruff.lint.per-file-ignores]
"app/api/v1/routes/mcp.py" = ["E501"]
"app/domain/mcp/service.py" = ["E501"]
